# dscap

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  README.md  capture.ini.example
ref/: README.md
scripts/: autorange.py  dsl2npy.py  dsl2png.py  dslread.py
src/: cfg.c  cfg.h  dscap.c  dscap.h  dsl.c  dsl.h  json.c  json.h
